--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
             </div>
-        </main>        </main>
+        </main>
     </div>
 
     <script src="js/utils.js"></script>
