Display total nights for the trip in Your Trip panel

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <input type="date" id="trip-end" placeholder="End Date">
                     </div>
                     <div class="trip-summary">
-                        <span id="trip-duration" class="duration-display">0 days</span>
+                        <span id="trip-duration" class="duration-display">0 nights</span>
                     </div>
                 </div>
 
