Fix location searching

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </div>
 
     <script src="js/utils.js"></script>
+    <script src="js/routing.js"></script>
     <script src="js/itinerary.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/export.js"></script>
